[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/underground/background_underground.png" type="Texture" id=1]
[ext_resource path="res://scenes/underground/underground.gd" type="Script" id=2]
[ext_resource path="res://resources/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/main/settings.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Vividly-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/main/dialogue.tscn" type="PackedScene" id=6]
[ext_resource path="res://sound/DUNGEON_TRACK.mp3" type="AudioStream" id=7]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.47451, 0.301961, 0.505882, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.290196, 0.215686, 0.470588, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color( 0.32549, 0.227451, 0.266667, 0.501961 )
shadow_size = 10
shadow_offset = Vector2( 0, -10 )

[sub_resource type="DynamicFont" id=1]
size = 200
outline_size = 10
outline_color = Color( 0.32549, 0.227451, 0.266667, 1 )
font_data = ExtResource( 5 )

[node name="Underground" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1920, 1080 )
theme = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Interactables" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Pause" type="Button" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -230.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 77.0
text = "Settings"

[node name="Inventory" type="PanelContainer" parent="Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -300.0
margin_bottom = 300.0
rect_min_size = Vector2( 200, 600 )
custom_styles/panel = SubResource( 2 )

[node name="Scroll" type="ScrollContainer" parent="Control/Inventory"]
margin_left = 10.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 590.0
scroll_horizontal_enabled = false

[node name="Items" type="VBoxContainer" parent="Control/Inventory/Scroll"]
margin_right = 200.0
margin_bottom = 580.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Settings" parent="Control" instance=ExtResource( 4 )]

[node name="Victory" type="Popup" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -290.0
margin_top = -102.5
margin_right = 290.0
margin_bottom = 102.5
rect_min_size = Vector2( 580, 205 )
popup_exclusive = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Victory"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Control/Victory/VBoxContainer"]
margin_right = 580.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
text = "Victory!"

[node name="Continue" type="Button" parent="Control/Victory/VBoxContainer"]
margin_left = 176.0
margin_top = 148.0
margin_right = 403.0
margin_bottom = 205.0
size_flags_horizontal = 4
text = "Continue"

[node name="Dialogue" parent="Control" instance=ExtResource( 6 )]
__meta__ = {
"_edit_lock_": true
}

[node name="Blocker" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1920, 1080 )
__meta__ = {
"_edit_lock_": true
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
bus = "Music"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Control/Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Control/Victory/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="done" from="Control/Dialogue" to="." method="_on_Dialogue_done"]
